adds minimalist parser + main for conf parse testing + default conf file

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,22 +1,16 @@
-# EXEMPLE DEAULT SERVER CONF, adapter les chemins au projet!!
-
-# Global defaults
-error_page 400 /errors/400.html;
-error_page 403 /errors/403.html;
-error_page 404 /errors/404.html;
-error_page 405 /errors/405.html;
-error_page 500 /errors/500.html;
-
-client_max_body_size 10M;
-
 # Server 1: static site + uploads + CGI (.py)
 server {
     listen 0.0.0.0:8080;
     root   ./www/site1;
     index  index.html;
 
-    # Fallback error pages (relative to root)
+    # Limits and error pages
+    client_max_body_size 10M;
+    error_page 400 /errors/400.html;
+    error_page 403 /errors/403.html;
     error_page 404 /errors/404.html;
+    error_page 405 /errors/405.html;
+    error_page 500 /errors/500.html;
 
     # Route: homepage and static files (GET only)
     location / {
@@ -66,6 +60,14 @@ server {
     listen 0.0.0.0:8081;
     root   ./www/site2;
     index  index.html;
+
+    # Limits and error pages
+    client_max_body_size 10M;
+    error_page 400 /errors/400.html;
+    error_page 403 /errors/403.html;
+    error_page 404 /errors/404.html;
+    error_page 405 /errors/405.html;
+    error_page 500 /errors/500.html;
 
     location / {
         methods GET;
